# mnist-gan-app

./: README.md  pyproject.toml
src/: app_streamlit.py  config.py  generator_service.py  model.py
src/mnist_gan_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
